--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @import-normalize; */
+
+/* bring in normalize.css styles */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +10,35 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+  /* transition: all 0.2s; */
 }
+
+li {
+  list-style-type: none;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+input[type='number'],
+input[type="number"]:hover,
+input[type="number"]:focus {
+  appearance: none;
+  -moz-appearance: textfield;
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500&family=Inter:wght@400;500&display=swap');
+/* font-family: 'Golos Text', sans-serif;
+font-family: 'Inter', sans-serif; */
